refactor(yaml): all tasks
all tasks task response description amended.
